--- a/SampleApp/Base.lproj/Document.xib
+++ b/SampleApp/Base.lproj/Document.xib
@@ -45,18 +45,18 @@
                                     <splitView arrangesAllSubviews="NO" dividerStyle="thin" translatesAutoresizingMaskIntoConstraints="NO" id="8FH-d9-e28">
                                         <rect key="frame" x="0.0" y="26" width="200" height="774"/>
                                         <subviews>
-                                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="mVf-ZY-pFr" userLabel="Scroll View">
+                                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="27" horizontalPageScroll="10" verticalLineScroll="27" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="mVf-ZY-pFr" userLabel="Scroll View">
                                                 <rect key="frame" x="0.0" y="0.0" width="200" height="387"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <clipView key="contentView" drawsBackground="NO" id="gBK-Tm-7IL">
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="387"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="14" outlineTableColumn="fiS-ax-lsW" id="DUb-hy-bRa" userLabel="Document Outline View" customClass="ExtOutlineView" customModule="SampleApp" customModuleProvider="target">
+                                                        <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="16" outlineTableColumn="fiS-ax-lsW" id="DUb-hy-bRa" userLabel="Document Outline View" customClass="ExtOutlineView" customModule="SampleApp" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="200" height="0.0"/>
                                                             <autoresizingMask key="autoresizingMask"/>
-                                                            <size key="intercellSpacing" width="3" height="0.0"/>
-                                                            <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            <size key="intercellSpacing" width="2" height="3"/>
+                                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                             <tableColumns>
                                                                 <tableColumn identifier="SidebarColumn" width="197" minWidth="16" maxWidth="1000" id="fiS-ax-lsW">
@@ -73,7 +73,7 @@
                                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                                     <prototypeCellViews>
                                                                         <tableCellView identifier="PageCell" id="7e2-6T-b60" userLabel="Page Cell View">
-                                                                            <rect key="frame" x="1" y="0.0" width="197" height="24"/>
+                                                                            <rect key="frame" x="1" y="1" width="197" height="24"/>
                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                             <subviews>
                                                                                 <imageView translatesAutoresizingMaskIntoConstraints="NO" id="dGr-bL-Z49">
