--- a/SampleApp/Base.lproj/Document.xib
+++ b/SampleApp/Base.lproj/Document.xib
@@ -133,8 +133,8 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="386"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="16" outlineTableColumn="BXm-8J-vHo" id="puU-ni-rOg" userLabel="Inspector Outline View" customClass="ExtOutlineView" customModule="SampleApp" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="0.0"/>
+                                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="16" outlineTableColumn="BXm-8J-vHo" id="puU-ni-rOg" userLabel="Inspector Outline View" customClass="ExtOutlineView" customModule="SampleApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="199" height="0.0"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <size key="intercellSpacing" width="2" height="3"/>
                                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
