--- a/BindableControlsApp/Base.lproj/MainMenu.xib
+++ b/BindableControlsApp/Base.lproj/MainMenu.xib
@@ -14,6 +14,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BindableControlsApp" customModuleProvider="target">
             <connections>
+                <outlet property="outlineView" destination="npL-MS-w2J" id="Kht-0L-bNY"/>
                 <outlet property="rootView" destination="EiT-Mj-1SZ" id="hyT-fU-DHR"/>
                 <outlet property="textField" destination="jvP-up-5Yl" id="UL5-zO-SYP"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -678,8 +679,88 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="27" horizontalPageScroll="10" verticalLineScroll="27" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qok-pB-j2k" userLabel="Scroll View">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
+                        <clipView key="contentView" drawsBackground="NO" id="lG5-nR-luw">
+                            <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="16" outlineTableColumn="2gU-Vi-hbh" id="npL-MS-w2J" userLabel="Outline View" customClass="ExtOutlineView" customModule="BindableControlsApp" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="0.0"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <size key="intercellSpacing" width="2" height="3"/>
+                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                    <tableColumns>
+                                        <tableColumn identifier="SidebarColumn" width="148" minWidth="16" maxWidth="1000" id="2gU-Vi-hbh">
+                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
+                                                <font key="font" metaFont="smallSystem"/>
+                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                            </tableHeaderCell>
+                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" id="EPh-tu-5AT">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                            <prototypeCellViews>
+                                                <tableCellView identifier="PageCell" id="TSR-tx-1T8" userLabel="Page Cell View">
+                                                    <rect key="frame" x="1" y="1" width="148" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <subviews>
+                                                        <imageView translatesAutoresizingMaskIntoConstraints="NO" id="LBy-VP-IiF">
+                                                            <rect key="frame" x="3" y="3" width="18" height="18"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="18" id="eyh-bG-URa"/>
+                                                                <constraint firstAttribute="width" constant="18" id="usx-5H-HYG"/>
+                                                            </constraints>
+                                                            <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSFolder" id="rYx-pI-v3z"/>
+                                                        </imageView>
+                                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8EX-y5-TGH" customClass="TextField" customModule="BindableControlsApp" customModuleProvider="target">
+                                                            <rect key="frame" x="26" y="3" width="121" height="18"/>
+                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Page Name" placeholderString="Untitled Page" usesSingleLineMode="YES" id="ffY-f2-7NF">
+                                                                <font key="font" metaFont="system"/>
+                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                        </textField>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" id="CcT-ry-4gA"/>
+                                                        <constraint firstAttribute="bottom" secondItem="8EX-y5-TGH" secondAttribute="bottom" constant="3" id="W3O-w7-FcE"/>
+                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="leading" secondItem="TSR-tx-1T8" secondAttribute="leading" constant="3" id="YCn-n4-MMS"/>
+                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="top" secondItem="8EX-y5-TGH" secondAttribute="top" id="aUr-Z0-883"/>
+                                                        <constraint firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" constant="3" id="b2D-y4-QrR"/>
+                                                        <constraint firstAttribute="trailing" secondItem="8EX-y5-TGH" secondAttribute="trailing" constant="3" id="c73-c1-jjg"/>
+                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="leading" secondItem="LBy-VP-IiF" secondAttribute="trailing" constant="7" id="dRp-FE-ugF"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <outlet property="imageView" destination="LBy-VP-IiF" id="otO-EU-xGk"/>
+                                                        <outlet property="textField" destination="8EX-y5-TGH" id="hvo-Cr-vbd"/>
+                                                    </connections>
+                                                </tableCellView>
+                                            </prototypeCellViews>
+                                        </tableColumn>
+                                    </tableColumns>
+                                </outlineView>
+                            </subviews>
+                            <nil key="backgroundColor"/>
+                        </clipView>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="T9Z-02-uyk"/>
+                        </constraints>
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="TfE-9R-Xtl">
+                            <rect key="frame" x="0.0" y="-16" width="0.0" height="16"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="fgH-Xy-y9X">
+                            <rect key="frame" x="-16" y="0.0" width="16" height="0.0"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
                     <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jvP-up-5Yl" customClass="TextField" customModule="BindableControlsApp" customModuleProvider="target">
-                        <rect key="frame" x="46" y="306" width="254" height="22"/>
+                        <rect key="frame" x="200" y="303" width="254" height="22"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="49b-LF-bRx">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -687,7 +768,15 @@
                         </textFieldCell>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Qok-pB-j2k" secondAttribute="bottom" id="CDH-7v-Z4E"/>
+                    <constraint firstItem="Qok-pB-j2k" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="Erc-PT-fi7"/>
+                    <constraint firstItem="Qok-pB-j2k" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="XBn-df-lXw"/>
+                </constraints>
             </view>
         </window>
     </objects>
+    <resources>
+        <image name="NSFolder" width="32" height="32"/>
+    </resources>
 </document>
