--- a/BindableControlsApp/Base.lproj/MainMenu.xib
+++ b/BindableControlsApp/Base.lproj/MainMenu.xib
@@ -767,6 +767,7 @@
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
+                        <accessibility identifier="NameField"/>
                     </textField>
                 </subviews>
                 <constraints>
