--- a/SearchApp/Base.lproj/MainMenu.xib
+++ b/SearchApp/Base.lproj/MainMenu.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6233" systemVersion="14A329f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6233"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -12,22 +11,19 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BindableControlsApp" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target">
             <connections>
-                <outlet property="outlineView" destination="npL-MS-w2J" id="Kht-0L-bNY"/>
-                <outlet property="rootView" destination="EiT-Mj-1SZ" id="hyT-fU-DHR"/>
-                <outlet property="textField" destination="jvP-up-5Yl" id="UL5-zO-SYP"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="BindableControlsApp" id="1Xt-HY-uBw">
+                <menuItem title="SearchApp" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="BindableControlsApp" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="SearchApp" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About BindableControlsApp" id="5kV-Vb-QxS">
+                            <menuItem title="About SearchApp" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -41,7 +37,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide BindableControlsApp" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide SearchApp" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -59,7 +55,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit BindableControlsApp" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit SearchApp" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -660,7 +656,7 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="BindableControlsApp Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="SearchApp Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                 <connections>
                                     <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
                                 </connections>
@@ -670,115 +666,15 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="BindableControlsApp" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="SearchApp" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="360"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
-            <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ" customClass="BackgroundView" customModule="BindableControls">
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
+            <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="27" horizontalPageScroll="10" verticalLineScroll="27" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qok-pB-j2k" userLabel="Scroll View">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
-                        <clipView key="contentView" drawsBackground="NO" id="lG5-nR-luw">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="16" outlineTableColumn="2gU-Vi-hbh" id="npL-MS-w2J" userLabel="Outline View" customClass="ExtOutlineView" customModule="BindableControls">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="0.0"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <size key="intercellSpacing" width="2" height="3"/>
-                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
-                                    <tableColumns>
-                                        <tableColumn identifier="SidebarColumn" width="148" minWidth="16" maxWidth="1000" id="2gU-Vi-hbh">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
-                                                <font key="font" metaFont="smallSystem"/>
-                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                            </tableHeaderCell>
-                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" id="EPh-tu-5AT">
-                                                <font key="font" metaFont="system"/>
-                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            </textFieldCell>
-                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
-                                            <prototypeCellViews>
-                                                <tableCellView identifier="PageCell" id="TSR-tx-1T8" userLabel="Page Cell View">
-                                                    <rect key="frame" x="1" y="1" width="148" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <imageView translatesAutoresizingMaskIntoConstraints="NO" id="LBy-VP-IiF">
-                                                            <rect key="frame" x="3" y="3" width="18" height="18"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="18" id="eyh-bG-URa"/>
-                                                                <constraint firstAttribute="width" constant="18" id="usx-5H-HYG"/>
-                                                            </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSFolder" id="rYx-pI-v3z"/>
-                                                        </imageView>
-                                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8EX-y5-TGH" customClass="TextField" customModule="BindableControls">
-                                                            <rect key="frame" x="26" y="3" width="121" height="18"/>
-                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Page Name" placeholderString="Untitled Page" usesSingleLineMode="YES" id="ffY-f2-7NF">
-                                                                <font key="font" metaFont="system"/>
-                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                            </textFieldCell>
-                                                            <accessibility identifier="PageName"/>
-                                                        </textField>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" id="CcT-ry-4gA"/>
-                                                        <constraint firstAttribute="bottom" secondItem="8EX-y5-TGH" secondAttribute="bottom" constant="3" id="W3O-w7-FcE"/>
-                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="leading" secondItem="TSR-tx-1T8" secondAttribute="leading" constant="3" id="YCn-n4-MMS"/>
-                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="top" secondItem="8EX-y5-TGH" secondAttribute="top" id="aUr-Z0-883"/>
-                                                        <constraint firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" constant="3" id="b2D-y4-QrR"/>
-                                                        <constraint firstAttribute="trailing" secondItem="8EX-y5-TGH" secondAttribute="trailing" constant="3" id="c73-c1-jjg"/>
-                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="leading" secondItem="LBy-VP-IiF" secondAttribute="trailing" constant="7" id="dRp-FE-ugF"/>
-                                                    </constraints>
-                                                    <connections>
-                                                        <outlet property="imageView" destination="LBy-VP-IiF" id="otO-EU-xGk"/>
-                                                        <outlet property="textField" destination="8EX-y5-TGH" id="hvo-Cr-vbd"/>
-                                                    </connections>
-                                                </tableCellView>
-                                            </prototypeCellViews>
-                                        </tableColumn>
-                                    </tableColumns>
-                                </outlineView>
-                            </subviews>
-                            <nil key="backgroundColor"/>
-                        </clipView>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="150" id="T9Z-02-uyk"/>
-                        </constraints>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="TfE-9R-Xtl">
-                            <rect key="frame" x="0.0" y="-16" width="0.0" height="16"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="fgH-Xy-y9X">
-                            <rect key="frame" x="-16" y="0.0" width="16" height="0.0"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                    </scrollView>
-                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jvP-up-5Yl" customClass="TextField" customModule="BindableControls">
-                        <rect key="frame" x="200" y="303" width="254" height="22"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="49b-LF-bRx">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                        <accessibility identifier="NameField"/>
-                    </textField>
-                </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Qok-pB-j2k" secondAttribute="bottom" id="CDH-7v-Z4E"/>
-                    <constraint firstItem="Qok-pB-j2k" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="Erc-PT-fi7"/>
-                    <constraint firstItem="Qok-pB-j2k" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="XBn-df-lXw"/>
-                </constraints>
             </view>
         </window>
     </objects>
-    <resources>
-        <image name="NSFolder" width="32" height="32"/>
-    </resources>
 </document>
